--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>My projects</h1>
     <h2>Misc</h2>
     <ul>
-        <li><a href="bookmarks/index.html">(Nostalgic) Bookmarks</a></li>
+        <li><a href="bookmarks/bookmarks.html">(Nostalgic) Bookmarks</a></li>
         <li><a href="guess-who/guesswho.html">Guess Who</a></li>
     </ul>
     <ul>
-        <li><a href="dnd-char-sheet/index.html">DND character sheet maker</a></li>
-        <li><a href="initiative-tracker/index.html">Initiative Tracker</a></li>
+        <li><a href="dnd-char-sheet/sheet.html">DND character sheet maker</a></li>
+        <li><a href="initiative-tracker/tracker.html">Initiative Tracker</a></li>
     </ul>
 </body>
 </html>
