standardize access to other files

--- a/dnd-char-sheet/sheet.html
+++ b/dnd-char-sheet/sheet.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>not the default file</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/hp.css">
+    <link rel="stylesheet" href="/dnd-char-sheet/css/style.css">
+    <link rel="stylesheet" href="/dnd-char-sheet/css/hp.css">
 </head>
 <body>
     <!--<div id="newSpell">
@@ -82,9 +82,9 @@
         </div>
     </div>
     
-    <script src="js/solveLevels.js"></script>
-    <script src="js/userInterface.js"></script>
-    <script src="js/spellHandler.js"></script>
-    <script src="js/classes.js"></script>
+    <script src="/dnd-char-sheet/js/solveLevels.js"></script>
+    <script src="/dnd-char-sheetjs/userInterface.js"></script>
+    <script src="/dnd-char-sheetjs/spellHandler.js"></script>
+    <script src="/dnd-char-sheetjs/classes.js"></script>
 </body>
 </html>
