--- a/initiative-tracker/tracker.html
+++ b/initiative-tracker/tracker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Initiative Tracker</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/initiative-tracker/css/style.css">
 </head>
 <body>
     <div id="setup">
@@ -29,7 +29,7 @@
         <button type="button" onclick="reorderInitiative()">Reorder Initiative</button>
         <button type="button" onclick="showReorderInitiative()">Hide/Show New Initiative</button>
     </div>
-    <script src="js/classes.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/initiative-tracker/js/classes.js"></script>
+    <script src="/initiative-tracker/js/script.js"></script>
 </body>
 </html>
