adjust initiative tracker - remove images and allow downloading the site (not yet though)

--- a/initiative-tracker/tracker.html
+++ b/initiative-tracker/tracker.html
@@ -28,6 +28,7 @@
         <button type="button" onclick="StorageHelper.clear()">Clear Storage</button>
         <button type="button" onclick="reorderInitiative()">Reorder Initiative</button>
         <button type="button" onclick="showReorderInitiative()">Hide/Show New Initiative</button>
+        <button type="button" onclick="downloadSite()">Download for Local Use</button>
     </div>
     <script src="/initiative-tracker/js/classes.js"></script>
     <script src="/initiative-tracker/js/script.js"></script>
