add rainbow to bokmark

--- a/bookmarks/bookmarks.html
+++ b/bookmarks/bookmarks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <link rel="shortcut icon" href="https://asset-cdn.schoology.com/sites/all/themes/schoology_theme/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://media-recommendation-tracker.netlify.app/mia.jpg" type="image/x-icon">
     <title>Random Stuff to use for Educational purpses</title>
 </head>
 <body>
