--- a/guess-who/guesswho.html
+++ b/guess-who/guesswho.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="/Guess Who/boardRandom.js"></script>
+    <script src="boardRandom.js"></script>
     <div>
     <div id="main">
     </div>
@@ -22,6 +22,7 @@
             <span><input type="checkbox" id="per"><label for="per">Percy Jackson</label></span>
             <span><input type="checkbox" id="ten"><label for="ten">That Time I Got Reincarnated as a Slime</label></span>
             <span><input type="checkbox" id="tsuki"><label for="tsuki">Tsukimichi: Moonlit Fantasy</label></span>
+            <span><input type="checkbox" id="fe3h"><label for="fe3h">Fire Emblem: Three Houses</label></span>
             <!--<span><input type="checkbox" id=""><label for=""></label></span>-->
             <button type="button" onclick="startGame()" id="start">Start Game</button>
         </div>
