--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <ul>
         <li><a href="bookmarks/bookmarks.html">(Nostalgic) Bookmarks</a></li>
         <li><a href="guess-who/guesswho.html">Guess Who</a></li>
+        <li><a href="media-recom/index.html">Media Recommendation Tracker</a></li>
     </ul>
+    <h2>DND</h2>
     <ul>
         <li><a href="dnd-char-sheet/sheet.html">DND character sheet maker</a></li>
         <li><a href="initiative-tracker/tracker.html">Initiative Tracker</a></li>
